some meta tags like author and keywords added to head.html module

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,11 @@
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{% if pagecontent_description.size > 10 %}{{ pagecontent_description }}{% else %}{{ site.description }}{% endif %}">
+    <meta name="keywords" content="Aref Fallah,عارف فلاح,iamrf,Developer">
+    <meta name="author" content="Aref Fallah - iamrf.net">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
     <title>{% if page.title and page.title != 'Home' %}{{ page.title }} | {% endif %}{{ site.title }}</title>
     {% assign pagecontent_description = page.content | markdownify | replace: '.', '. ' | replace: '</h2>', ': ' | replace: '</h3>', ': ' | replace: '</h4>', ': ' | strip_html | strip_newlines | replace: '  ', ' ' | truncate: 160 %}
