new course called learning HTML initialized

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,10 +15,10 @@
             وبلاگ</h5>Blog
             </div>
           </a>
-          <a href="{{ site.url }}/travels">
+          <a href="{{ site.url }}/courses">
             <div class="col s12 m4 l4 xl4 center">
-              <i class="fa fa-tree fa-4x"></i><br><h2><h5>
-              سفرنامه</h5>Travel Gallery
+              <i class="fa fa-book fa-4x"></i><br><h2><h5>
+              درس ها</h5>Courses
             </div>
           </a>
           <a href="{{ site.url }}/portfolio">
