--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,7 +4,7 @@
             <a id="logo-container" href="{{ site.url }}" class="brand-logo">IAMRF</a>
             <ul class="left hide-on-med-and-down">
                 <li><a href="{{ site.url }}/blog">وبلاگ</a></li>
-                <li><a href="{{ site.url }}/travels">سفرنامه</a></li>
+                <li><a href="{{ site.url }}/courses">درس ها</a></li>
                 <li><a href="{{ site.url }}/portfolio">نمونه کار ها</a></li>
                 <li><a href="{{ site.url }}/about">درباره</a></li>
                 <li><a href="{{ site.url }}/contact">ارتباط با من</a></li>
