--- a/_layouts/intro.html
+++ b/_layouts/intro.html
@@ -14,7 +14,7 @@ layout: default
 
 <div class="clearfix"></div>
 
-{% include intro-travels.html %}
+{% include intro-courses.html %}
 
 <div class="clearfix"></div>
 
