Gemfile.lock added to .git ignore and Courses link added to mobile navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,7 +22,7 @@
 <ul id="nav-mobile" class="sidenav">
     <li><a href="{{ site.url }}">خانه</a></li>
     <li><a href="{{ site.url }}/blog">وبلاگ</a></li>
-    <li><a href="{{ site.url }}/travels">سفرنامه</a></li>
+    <li><a href="{{ site.url }}/courses">درس ها</a></li>
     <li><a href="{{ site.url }}/portfolio">نمونه کار ها</a></li>
     <br>    
     <li><a href="{{ site.url }}/about">درباره</a></li>
