some banners changed

--- a/_includes/intro-courses.html
+++ b/_includes/intro-courses.html
@@ -12,7 +12,7 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="{{ site.url }}/assets/img/portfolio-bg.jpg" alt="سفرنامه"></div>
+        <div class="parallax"><img src="{{ site.url }}/assets/img/course-bg.jpg" alt="سفرنامه"></div>
     </div>
 
     <div id="intro-course-body" class="container">
